Restructured routes to avoid conflicts
