# src/routers/productRouter.ts
@@ -1,10 +1,15 @@
 import { Router } from "express";
-import { GET } from "../controllers/Product";
+import { GET, GET_ALL, POST } from "../controllers/Product";
 
 const router = Router();
-const route = router.route('/product/:id');
-const allRoute = router.route('/product/all');
 
-route.get(GET);
+// Default route
+const route = router.route('/product');
+route.get(GET_ALL);
+route.post(POST);
+
+// Routes using product id
+const idRoute = router.route('/product/:id');
+idRoute.get(GET);
 
 export default router;
